[package]
name = "bitcoin-hw"
version = "0.1.0-unreleased"
license = "CC0-1.0"
repository = "https://github.com/lightyear15/bitcoin-hw"
description = "A library for interacting with Bitcoin hardware wallets."
categories = ["hardware-support", "bitcoin"]
keywords = ["hardware", "wallet", "bitcoin", "cryptocurrency"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
